# spi

./: .env.example  .gitignore  Caddyfile  PROMPT-CLAUDE-CODE.md  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  blocks.py  bookmarks.py  chats.py  contacts.py  files.py  folders.py  gifs.py  groups.py  messages.py  push.py  schemas.py  search.py  sync.py  users.py
backend/app/core/: config.py  deps.py  limiter.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/db/alembic/: env.py  script.py.mako
backend/app/db/alembic/snapshots/: 0001_schema.sql
backend/app/db/alembic/versions/: 0001_initial_schema.py  0002_add_file_original_name.py  0003_add_message_scheduling.py  0004_add_folders.py  0005_add_sticker_gif_message_types.py  0006_add_call_message_type.py  0007_add_secret_chats.py  0008_add_channels.py  0009_add_video_note_message_type.py
backend/app/services/: avatar.py  chat.py  mail.py  media.py  push.py  scheduler.py  storage.py
backend/app/ws/: events.py  manager.py  router.py
backend/tests/: conftest.py  test_auth.py  test_calls.py  test_channels.py  test_contacts.py  test_directory.py  test_export.py  test_files.py  test_folders.py  test_forward_and_special.py  test_groups.py  test_health.py  test_invites.py  test_mail.py  test_media_archive.py  test_messages.py  test_pinned_messages.py  test_polls.py  test_push.py  test_saved_and_bookmarks.py  test_scheduled_messages.py  test_search.py  test_secret_chats.py  test_sessions.py  test_stickers_and_gifs.py  test_video_note.py
db/: schema.sql  seed.sql
docs/: 01-TZ.md  02-ARCHITECTURE.md  03-SETUP-DEPLOY.md  API.md  DECISIONS.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  sw.ts  vite-env.d.ts
frontend/src/app/: App.tsx  AppLayout.module.css  AppLayout.tsx  CallOverlay.module.css  CallOverlay.tsx  RequireAuth.tsx  providers.tsx  useRealtimeSync.ts
frontend/src/shared/: push.ts  theme.ts
frontend/src/shared/i18n/: en.ts  (+2 more)
frontend/src/test/: setup.ts
scripts/: deploy.sh
(+77 files in other folders)
